--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -557,15 +557,20 @@ section,
 }
 
 
-.hero img {
-  position: absolute;
-  inset: 0;
-  display: block;
-  width: 100%;
-  height: 100%;
-  object-fit: cover;
-  z-index: 1;
+@media (max-width: 768px) {
+  .hero img {
+    position: absolute;
+    inset: 0;
+    display: block;
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    z-index: 1;
+    /* Ajustement pour afficher la partie gauche */
+    object-position: left;
+  }
 }
+
 
 .hero:before {
   content: "";
